--- a/packages/jaeger-ui/tsconfig.json
+++ b/packages/jaeger-ui/tsconfig.json
@@ -13,5 +13,6 @@
 // limitations under the License.
 {
   "extends": "../../tsconfig",
-  "include": ["src/**/*.tsx", "typings"]
+  "include": ["src", "typings"],
+  "exclude": ["src/**/*.d.ts"],
 }
