--- a/.github/workflows/reusable-push-to-docker.yml
+++ b/.github/workflows/reusable-push-to-docker.yml
@@ -55,7 +55,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: ${{ inputs.dockerfile }}
-          platforms: linux/amd64,linux/arm64
+          #platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
