--- a/.github/workflows/reusable-push-to-docker.yml
+++ b/.github/workflows/reusable-push-to-docker.yml
@@ -27,13 +27,16 @@ jobs:
         uses: actions/checkout@v3
 
       # https://github.com/docker/setup-qemu-action
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      # - name: Set up QEMU
+      # uses: docker/setup-qemu-action@v1
 
       # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      # id: buildx
+      # uses: docker/setup-buildx-action@v1
+
+      - name: Set up depot.dev multi-arch runner
+        uses: depot/setup-action@v1
 
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
