--- a/.github/workflows/reusable-push-to-docker.yml
+++ b/.github/workflows/reusable-push-to-docker.yml
@@ -55,7 +55,7 @@ jobs:
           tags: ${{ inputs.tags }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: depot/build-push-action@v1
         with:
           file: ${{ inputs.dockerfile }}
           # platforms: linux/amd64,linux/arm64
