--- a/.github/workflows/reusable-push-to-docker.yml
+++ b/.github/workflows/reusable-push-to-docker.yml
@@ -57,6 +57,6 @@ jobs:
           file: ${{ inputs.dockerfile }}
           platforms: linux/amd64
           # platforms: linux/amd64,linux/arm64
-          # push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
