--- a/.github/workflows/release-digma.yml
+++ b/.github/workflows/release-digma.yml
@@ -35,8 +35,18 @@ jobs:
           name: nginx-config
           path: nginx.conf.template
 
-  push:
+      - uses: actions/upload-artifact@v3
+        with:
+          name: dockerfile
+          path: Dockerfile
+
+  download:
+    name: Build and push Docker image
+
     needs: [build]
+
+    runs-on: ubuntu-latest
+
     steps:
       - uses: actions/download-artifact@v3
         with:
@@ -46,13 +56,35 @@ jobs:
         with:
           name: nginx-config
 
+      - uses: actions/download-artifact@v3
+        with:
+          name: dockerfile
+
       - name: Display structure of downloaded files
         run: ls -R
 
-      - uses: digma-ai/jaeger-ui/.github/workflows/reusable-push-to-docker.yml@feature/docker
+      # https://github.com/docker/setup-qemu-action
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      # https://github.com/docker/setup-buildx-action
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          images: |
-            digmaai/jaeger-ui
+          username: ${{ secrets.DOCKERHUB_DIGMAAI_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_DIGMAAI_TOKEN }}
+
+      - name: Docker meta
+        id: metadata # you'll use this in the next step
+        uses: docker/metadata-action@v3
+        with:
+          # list of Docker images to use as base name for tags
+          images: digmaai/jaeger-ui
+          # Docker tags based on the following events/attributes
           tags: |
             type=schedule
             type=ref,event=branch
@@ -63,7 +95,13 @@ jobs:
             type=sha
             # set latest tag for digma branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'digma') }}
-          dockerfile: ./Dockerfile
-        secrets:
-          REGISTRY_USERNAME: ${{ secrets.DOCKERHUB_DIGMAAI_USERNAME }}
-          REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_DIGMAAI_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          file: ./Dockerfile
+          # platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
