--- a/.github/workflows/release-digma.yml
+++ b/.github/workflows/release-digma.yml
@@ -67,22 +67,22 @@ jobs:
 
       # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v2
 
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_DIGMAAI_USERNAME }}
           password: ${{ secrets.DOCKERHUB_DIGMAAI_TOKEN }}
 
       - name: Docker meta
         id: metadata # you'll use this in the next step
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           # list of Docker images to use as base name for tags
           images: digmaai/jaeger-ui
@@ -99,8 +99,9 @@ jobs:
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'digma') }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
+          context: .
           file: ./Dockerfile
           # platforms: linux/amd64
           platforms: linux/amd64,linux/arm64
