--- a/.github/workflows/release-digma.yml
+++ b/.github/workflows/release-digma.yml
@@ -23,7 +23,7 @@ jobs:
           cache: yarn
           node-version: '16'
       - run: yarn install --frozen-lockfile
-      # - run: yarn lint
+      - run: yarn lint
       - run: yarn build
 
       - uses: actions/upload-artifact@v3
@@ -43,9 +43,7 @@ jobs:
 
   download:
     name: Build and push Docker image
-
     needs: [build]
-
     runs-on: ubuntu-latest
 
     steps:
@@ -61,9 +59,6 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: dockerfile
-
-      - name: Display structure of downloaded files
-        run: ls -R
 
       # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
