--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "coverage": "lerna run coverage",
     "eslint": "eslint --cache 'scripts/*.{js,jsx,ts,tsx}' 'packages/*/src/**/*.{js,jsx,ts,tsx}' 'packages/*/*.{js,jsx,ts,tsx}'",
     "fmt": "yarn prettier",
-    "lint": "npm-run-all -ln --parallel prettier-lint tsc-lint eslint check-license",
+    "lint": "npm-run-all -ln --parallel prettier-lint tsc-lint eslint",
     "prepare": "lerna run --stream --sort prepublishOnly",
     "prettier": "prettier --write '{.,scripts}/*.{js,jsx,json,md,ts,tsx}' 'packages/*/{src,demo/src}/**/!(layout.worker.bundled|react-vis).{css,js,jsx,json,md,ts,tsx}' 'packages/*/*.{css,js,jsx,json,md,ts,tsx}'",
     "prettier-lint": "prettier --list-different '{.,scripts}/*.{js,jsx,json,md,ts,tsx}' 'packages/*/{src,demo/src}/**/!(layout.worker.bundled|react-vis).{css,js,jsx,json,md,ts,tsx}' 'packages/*/*.{css,js,jsx,json,md,ts,tsx}'",
