--- a/packages/jaeger-ui/tsconfig.json
+++ b/packages/jaeger-ui/tsconfig.json
@@ -14,5 +14,5 @@
 {
   "extends": "../../tsconfig",
   "include": ["src", "typings"],
-  "exclude": ["src/**/*.d.ts"],
+  "exclude": ["src/**/*.d.ts"]
 }
