--- a/.github/workflows/release-digma.yml
+++ b/.github/workflows/release-digma.yml
@@ -5,7 +5,6 @@ on:
   workflow_dispatch:
   release:
     types: [released]
-  pull_request:
 
 # permissions are needed if pushing to ghcr.io
 permissions:
@@ -98,8 +97,7 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          # platforms: linux/amd64
           platforms: linux/amd64,linux/arm64
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.metadata.outputs.tags }}
           labels: ${{ steps.metadata.outputs.labels }}
