Add additional tag to the Docker image

--- a/.github/workflows/release-digma.yml
+++ b/.github/workflows/release-digma.yml
@@ -85,6 +85,7 @@ jobs:
             type=schedule
             type=ref,event=branch
             type=ref,event=pr
+            type=match,pattern=v(.*),group=1
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
