--- a/.github/workflows/digma-build.yml
+++ b/.github/workflows/digma-build.yml
@@ -20,7 +20,7 @@ jobs:
         id: setup-node
         with:
           node-version-file: '.nvmrc'
-          cache: 'npm'
+          cache: 'yarn'
 
       # - id: node-modules-cache
       #   uses: actions/cache@v4
