--- a/.github/workflows/digma-lint-test.yml
+++ b/.github/workflows/digma-lint-test.yml
@@ -12,7 +12,7 @@ jobs:
         id: setup-node
         with:
           node-version-file: '.nvmrc'
-          cache: 'npm'
+          cache: 'yarn'
 
       # - id: node-modules-cache
       #   uses: actions/cache@v4
@@ -23,7 +23,7 @@ jobs:
       #       ${{ runner.os }}-node-${{ steps.setup-node.outputs.node-version }}-node_modules-
 
       # - if: steps.node-modules-cache.outputs.cache-hit != 'true'
-      #  run: yarn install --frozen-lockfile
+      - run: yarn install --frozen-lockfile
 
       - name: Lint
         run: yarn lint
