--- a/.github/workflows/digma-release.yml
+++ b/.github/workflows/digma-release.yml
@@ -37,19 +37,19 @@ jobs:
   update-digma-ui:
     needs: [attach-dist-asset, build-push-docker-image]
     name: Update version in Digma UI
-    runs-on: ubuntu-latests
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Get Jaeger version
         run: echo "JAEGER_VERSION=$(jq -r '.version' jaeger.json)" >> $GITHUB_ENV
 
-      - name: Get dist artifact version name
+      - name: Get distributive filename
         id: get-dist-filename
         run: echo "dist-filename=$(cat ${{ needs.build.outputs.dist-filename }})" >> $GITHUB_ENV
 
       - run: |
           curl -X POST -H "Accept: application/vnd.github.v3+json" \
-          -H "Authorization: token ${{ secrets.PAT }}" \
+          -H "Authorization: token ${{ secrets.RELEASE_PAT }}" \
           https://api.github.com/repos/digma-ai/digma-ui/dispatches \
           -d '{
             "event_type": "update-jaeger",
