--- a/.github/workflows/digma-docker-image.yml
+++ b/.github/workflows/digma-docker-image.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.dist-artifact-name }}
-          path: dist/
+          path: dist
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
