--- a/.github/workflows/digma-push.yml
+++ b/.github/workflows/digma-push.yml
@@ -35,11 +35,11 @@ jobs:
     needs: lint-test
     uses: ./.github/workflows/digma-build.yml
 
-  build-test-docker-image:
+  build-docker-image:
     name: Build Docker image
     needs: build
     uses: ./.github/workflows/digma-docker-image.yml
     secrets: inherit
     with:
-      dist-artifact-name: ${{ needs.build.outputs.dist-filename }}
+      dist-artifact-name: ${{ needs.build.outputs.artifact-name }}
       push: false
