Change default branch to main

--- a/.github/workflows/digma-docker-image.yml
+++ b/.github/workflows/digma-docker-image.yml
@@ -48,8 +48,8 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
             type=sha
-            # set latest tag for digma branch
-            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'digma') }}
+            # set latest tag for main branch
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
