--- a/.github/workflows/digma-push.yml
+++ b/.github/workflows/digma-push.yml
@@ -3,7 +3,7 @@ name: Lint & test & build
 on:
   push:
     branches:
-      - 'digma'
+      - 'main'
     # Github Actions don't support YAML anchors yet, so we have to repeat
     # the paths-ignore in both push and pull_request events.
     # More info: https://github.com/actions/runner/issues/1182
@@ -16,7 +16,7 @@ on:
       - 'LICENSE'
   pull_request:
     branches:
-      - 'digma'
+      - 'main'
     paths-ignore:
       - '.vscode/**'
       - '.prettierignore'
