--- a/.github/workflows/digma-release.yml
+++ b/.github/workflows/digma-release.yml
@@ -3,7 +3,7 @@ name: Lint & test & build & publish Docker image
 on:
   workflow_dispatch:
   release:
-    types: [released]
+    types: [prereleased, released]
 
 permissions:
   contents: write
@@ -38,6 +38,7 @@ jobs:
     name: Update dependencies in Digma UI
     needs: [build, attach-release-asset, build-push-docker-image]
     runs-on: ubuntu-latest
+    if: github.event.release.prerelease == false
     steps:
       - uses: actions/checkout@v4
       - name: Get Jaeger version
