--- a/.github/workflows/digma-bump.yml
+++ b/.github/workflows/digma-bump.yml
@@ -3,9 +3,18 @@ name: Bump Digma Jaeger UI version and push git tag
 on:
   workflow_dispatch:
     inputs:
-      version:
-        description: 'Version to set (e.g., 1.2.3)'
+      version_type:
+        description: 'Type of version bump'
         required: true
+        type: choice
+        options:
+          - major
+          - minor
+          - patch
+          - premajor
+          - preminor
+          - prepatch
+          - prerelease
 
 jobs:
   bump:
@@ -24,14 +33,29 @@ jobs:
           VERSION=$(jq -r '.version' ./packages/jaeger-ui/package.json)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
+      - name: Get current digma-jaeger-ui version
+        id: get-version
+        run: |
+          CURRENT_DIGMA_JAEGER_UI_VERSION=$(jq -r '.["digma-jaeger-ui-version"]' ./packages/jaeger-ui/package.json)
+          echo "CURRENT_DIGMA_JAEGER_UI_VERSION=$CURRENT_DIGMA_JAEGER_UI_VERSION" >> $GITHUB_ENV
+
+      - name: Calculate next digma-jaeger-ui version
+        run: |
+          if [[ "${{ inputs.version_type }}" == "prerelease" || "${{ inputs.version_type }}" == "premajor" || "${{ inputs.version_type }}" == "preminor" || "${{ inputs.version_type }}" == "prepatch" ]]; then
+            NEXT_DIGMA_JAEGER_UI_VERSION=$(npx semver $CURRENT_DIGMA_JAEGER_UI_VERSION -i ${{ inputs.version_type }} --preid alpha)
+          else
+            NEXT_DIGMA_JAEGER_UI_VERSION=$(npx semver $CURRENT_DIGMA_JAEGER_UI_VERSION -i ${{ inputs.version_type }})
+          fi
+          echo "NEXT_DIGMA_JAEGER_UI_VERSION=$NEXT_DIGMA_JAEGER_UI_VERSION" >> $GITHUB_ENV
+
       - name: Update digma-jaeger-ui version
         run: |
-          jq '.["digma-jaeger-ui-version"] = "${{ inputs.version }}"' ./packages/jaeger-ui/package.json > tmp.$$.json && mv tmp.$$.json ./packages/jaeger-ui/package.json
+          jq '.["digma-jaeger-ui-version"] = "${{ env.NEXT_DIGMA_JAEGER_UI_VERSION }}"' ./packages/jaeger-ui/package.json > tmp.$$.json && mv tmp.$$.json ./packages/jaeger-ui/package.json
 
       - run: |
-          TAG="v${{ env.VERSION }}-digma.${{ inputs.version }}"
+          TAG="v${{ env.VERSION }}-digma.${{ env.NEXT_DIGMA_JAEGER_UI_VERSION }}"
           git add packages/jaeger-ui/package.json
-          git commit -m "Bump Digma Jaeger UI version to ${{ inputs.version }} [skip ci]"
+          git commit -m "Bump Digma Jaeger UI version to ${{ env.NEXT_DIGMA_JAEGER_UI_VERSION }} [skip ci]"
           git tag $TAG
           git push
           git push origin $TAG
